--- a/laogua.html
+++ b/laogua.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>小欣</title>
+    <title>老瓜</title>
     <style>
         /* 弹窗样式 */
         .modal-overlay {
