Update laogua.html via web editor

--- a/laogua.html
+++ b/laogua.html
@@ -476,5 +476,9 @@
         // 注意：移除了原来的 window.addEventListener('load', main);
         // 现在动画会在点击确认按钮后开始
     </script>
+<div id="xf-MusicPlayer" data-cdnName="https://player.xfyun.club/js"></div>
+
+<!-- 引入外部CDN插件 -->
+<script src="https://player.xfyun.club/js/xf-MusicPlayer/js/xf-MusicPlayer.min.js"></script>
 </body>
 </html>
