Update index.html via web editor

--- a/guaのwo/index.html
+++ b/guaのwo/index.html
@@ -10,7 +10,7 @@
 		<div id="bkground">
 			<div class="my-information">
 				<i></i>
-				<h3>Lin&nbsp;Zhang</h3>
+				<h3>Lao&nbsp;Gua</h3>
 				<h4>Nanjing University of Science and Technology</h4>
 				<h5>School of computer science and engineering</h5>
 				<p>Welcome to my personal website！</p>
